Tue May 25 20:07:40 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tests/IDL_Test/Inherited_Component/IhC_Foo.mpc:
        * tests/IDL_Test/Inherited_Component/IhC_Bar.mpc:
        * tests/IDL_Test/Inherited_Component/IhC_Foo.idl:
        * tests/IDL_Test/Inherited_Component/IhC_Bar.idl:
        
          - Removed dummy_label tags and updated build projects
          - Added corresponding base and derived homes, with
            attributes to test the recently added set_attributes()
            generation for homes.

Tue May 25 18:29:02 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/Config_Handlers/DynAny_Handler/DynAny_Handler.cpp:

          Added checking to ensure that data values are consistent with
          their stated types.

Tue May 25 18:14:33 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ciao/Servants/Home_Servant_Impl_Base.cpp:
        * ciao/Servants/Home_Servant_Impl_Base.h:

          Added no-op set_attributes() method similar to that in
          class Connector_Servant_Impl_Base. It can now be overridden
          (or not, if there are no read/write attributes) in
          generated home servants.

Tue May 25 16:10:18 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * MPC/config/ciao_deployment_handlers.mpb:

          Fuzz.

Tue May 25 16:07:32 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/LocalityManager/Daemon/Locality_Manager.mpc:
        * DAnCE/MPC/config/dance_locality_manager.mpb:
        * MPC/config/ciao_deployment_handlers.mpb:

          Static linking fix.

Tue May 25 14:38:55 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * connectors/ami4ccm/tests/DelReplyH/Base/DelReplyH.mpc
        * connectors/ami4ccm/tests/DelReplyH/Sender/DelReplyH_Sender.mpc
        Change flag of lema_gen Base from -GM back to -GC.

Tue May 25 14:13:55 UTC 2010  Marcel Smit  <msmit@remedy.nl>
