@@ -4,11 +4,9 @@
 #include "RootPanel.h"
 #include "NavUnit.h"
 
-
 AddNavUnitCmd::AddNavUnitCmd()
 {
 }
-
 
 AddNavUnitCmd *
 AddNavUnitCmd::create(RootPanel *form, NavUnit *unit)
@@ -18,7 +16,6 @@ AddNavUnitCmd::create(RootPanel *form, NavUnit *unit)
   cmd->unit_ = unit;
   return cmd;
 }
-
 
 int
 AddNavUnitCmd::execute(void * /* context */)
