@@ -2,7 +2,6 @@
 
 #include "NavUnit.h"
 
-
 NavUnit::NavUnit(const UnitID &id, const char *short_descr)
 : id_(id), short_descr_(short_descr)
 {
